# shelldeck

./: .gitignore  LICENSE  README.md  io.github.zyragames.shelldeck.yml  metadata.json  pyproject.toml
.github/workflows/: build-flatpak.yml  flathub-lint.yml
docs/: flatpak.md
flatpak/: io.github.zyragames.shelldeck.desktop  io.github.zyragames.shelldeck.metainfo.xml  python3-deps.json  requirements-flatpak.txt
packaging/: shelldeck.desktop  shelldeck.spec
scripts/: flatpak_build.sh  flatpak_publish.sh  flatpak_run.sh
src/: App.tsx  index.css  types.ts
src/components/: Homebar.tsx  HostEditor.tsx  Sidebar.tsx  TabsView.tsx  Terminal.tsx
src/shelldeck/: __init__.py  __main__.py  app.py  dev_db_check.py  ssh_config.py
src/shelldeck/data/: __init__.py  db.py  json_io.py  models.py  repository.py
src/shelldeck/ssh/: __init__.py  command.py
src/shelldeck/terminal/: __init__.py  backend.py  session.py
src/shelldeck/ui/: __init__.py  icons.py  main_window.py  settings.py  sidebar.py  ssh_agent_status.py  terminal.py  theme.py  topbar.py  ui_state.py
src/shelldeck/ui/widgets/: about_dialog.py  group_dialog.py  host_dialog.py  host_item.py  settings_dialog.py  ssh_import_dialog.py
tests/: test_smoke.py  test_terminal_backend.py
tools/: FLATHUB_TESTER.md  flathub_tester.py
