[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shelldeck"
version = "0.1.0"
description = "ShellDeck desktop application."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ShellDeck Contributors" }]
dependencies = [
  "PySide6>=6.6",
  "qtawesome>=1.3.1",
  "paramiko>=3.4.0",
  "termqt",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
  "mypy>=1.9.0",
  "pytest>=8.0.0",
]
packaging = [
  "pyinstaller>=6.0.0",
]

[project.scripts]
shelldeck = "shelldeck.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
shelldeck = ["ui/assets/*.png"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
